# rust-connect-py-ai-to-ic

./: .gitignore  README.md
internet_computer/demo_gpt2_model/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
internet_computer/demo_gpt2_model/src/demo_gpt2_model_backend/: Cargo.toml  demo_gpt2_model_backend.did
internet_computer/demo_gpt2_model/src/demo_gpt2_model_backend/src/: lib.rs
internet_computer/demo_gpt2_model/src/demo_gpt2_model_frontend/src/: index.html  index.js
internet_computer/examples/gpt2/: README.md  dfx.json
internet_computer/examples/gpt2/src/gpt2_backend/: Cargo.toml  gpt2_backend.did
internet_computer/examples/gpt2/src/gpt2_backend/src/: lib.rs  onnx.rs  storage.rs
internet_computer/gpt2/: Cargo.toml  README.md  build.sh
internet_computer/gpt2/src/gpt2_backend/: Cargo.toml  gpt2_backend.did
internet_computer/gpt2/src/gpt2_backend/src/: lib.rs  onnx.rs  upload_utils.rs
internet_computer/multi_query_multi_canister_demo/: Cargo.toml  README.md  dfx.json
internet_computer/multi_query_multi_canister_demo/src/multi_query_multi_canister_demo_backend/: Cargo.toml
internet_computer/multi_query_single_canister_demo/: Cargo.toml  README.md  dfx.json
internet_computer/multi_query_single_canister_demo/src/multi_query_single_canister_demo_backend/: Cargo.toml  multi_query_single_canister_demo_backend.did
internet_computer/multi_query_single_canister_demo/src/multi_query_single_canister_demo_backend/src/: lib.rs
internet_computer/parallel_query_single_canister_demo/: Cargo.toml  README.md  dfx.json
internet_computer/parallel_query_single_canister_demo/src/parallel_query_single_canister_demo_backend/: Cargo.toml
internet_computer/rubriks/sequenced_calls/: README.md  build.sh
internet_computer/rubriks/single_call/: README.md  build.sh  dfx.json
internet_computer/rubriks/single_call/src/single_call_backend/: single_call_backend.did
internet_computer/rubriks/single_call/src/single_call_backend/src/: lib.rs  onnx.rs
internet_computer/sequenced_calls/: Cargo.toml  README.md  dfx.json
internet_computer/sequenced_calls/src/sequenced_calls_backend/: Cargo.toml  sequenced_calls_backend.did
internet_computer/sequenced_calls/src/sequenced_calls_backend/src/: lib.rs  onnx.rs  pipeline.rs
internet_computer/single_call/: Cargo.toml  README.md  dfx.json
internet_computer/single_call/src/single_call_backend/: Cargo.toml
internet_computer/single_call/src/single_call_backend/src/: onnx.rs
internet_computer/single_query_demo/: Cargo.toml  README.md  dfx.json
internet_computer/single_query_demo/src/single_query_demo_backend/: Cargo.toml  single_query_demo_backend.did
internet_computer/single_query_demo/src/single_query_demo_backend/src/: lib.rs
internet_computer/wasi_ic_ai_sequence/: Cargo.toml  README.md  build.sh  dfx.json
internet_computer/wasi_ic_ai_sequence/src/wasi_ic_ai_sequence_backend/: Cargo.toml  wasi_ic_ai_sequence_backend.did
internet_computer/wasi_ic_ai_sequence/src/wasi_ic_ai_sequence_backend/src/: onnx.rs
internet_computer/wasi_ic_ai_single/: Cargo.toml  build.sh  dfx.json
internet_computer/wasi_ic_ai_single/src/wasi_ic_ai_single_backend/: Cargo.toml
internet_computer/wasi_ic_ai_single/src/wasi_ic_ai_single_backend/src/: upload_utils.rs
python/: GPT2_kv.py  GPT2_kv_in.py  GPT2_kv_out.py  GPT2_max_partition_model_pool.py  GPT2_no_cache.py  GPT2_partitioned_model_mean.py
python/onnx_model/: end_of_text.npy
python/test/: GPT2_inspect_tokens.py  GPT2_kv_test.py
rust/test_model/: Cargo.toml
rust/test_model/src/: GPT2_kv.rs  GPT2_kv_out.rs  GPT2_no_kv.rs  main.rs
rust/upload_byte_file/: Cargo.toml
rust/upload_byte_file/src/: error.rs  main.rs
rust/upload_multiple_byte_files/src/: main.rs
