[package]
name = "test_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]

[dependencies]
#tract-onnx = "0.20.21"
#tract-onnx = { path="../../../onnx-min", default-features = false }
#tract-onnx = { path="../../../onnx-min-byte", default-features = false }
#tract-core = { version = "=0.20.22-pre", path = "../../../tract-main/core" , default-features = false}
tract-onnx = { path="../../../tract-ic-ai/onnx", default-features = false }
tract-core = { path = "../../../tract-ic-ai/core" , default-features = false}

bytes = { version = "1.0.1", default-features = false}
#tract-onnx = { path="../../../tract-main/onnx", default-features = false}
#tract-nnef  = { path="../../../tract-main/nnef", default-features = false}
anyhow = "1.0"
#smallvec = "1.11.2"
smallvec = "1.6.1"
#bincode = "1.3.3"
#serde = "1.0.194"

