[package]
name = "test_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]

[dependencies]
#tract-onnx = "0.20.21"
tract-onnx = { git = "https://github.com/jeshli/tract-ic-ai.git", branch = "main", package = "tract-onnx" }
tract-core = { git = "https://github.com/jeshli/tract-ic-ai.git", branch = "main", package = "tract-core" }

bytes = { version = "1.0.1", default-features = false}
anyhow = "1.0"
#smallvec = "1.11.2"
smallvec = "1.6.1"
#bincode = "1.3.3"
#serde = "1.0.194"

