[package]
name = "wasi_ic_ai_sequence_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
anyhow = "1.0"
bytes = "1.5.0"
prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
#tract-onnx = { git = "https://github.com/sonos/tract", version = "=0.21.6-pre" }
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
ic-stable-structures = "0.6"
ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.4.1" }


